# video_transcription

./: .gitignore  CLAUDE.md  IMPLEMENTATION_KEYFRAME_RENDERING.md  README.md  clear_gpu.py  example_urls.txt  process_video_gemini_finisher.py  process_video_gemini_only.py  process_video_local_only.py  pyproject.toml  requirements.txt  test_gemini_key.py  urls_linear_algebra.txt
video_transcription/: __init__.py  asr.py  batch.py  compat.py  gpu.py  keyframe.py  output.py  prompts.py  vad.py  video_utils.py
